# Outils-de-Traitement-de-Corpus

./: .gitignore  README.md  pyproject.toml  tp1.md
data/clean/: test.csv  train.csv  validation.csv
doc/: readme_ch.md  readme_en.md
src/plot/: plot.py  train_plot.py
src/process/: 1.crawl_author.py  2.crawl_poem.py  3.split_dataset.py  4.make_final_dataset.py  crawl_author.py  crawl_poem.py  scraw.py
src/train/: log  test.py  train.py
tp/: tp1.md
