[project]
name = "outil-corpus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.7.0",
    "beautifulsoup4>=4.13.4",
    "datasets>=3.6.0",
    "evaluate>=0.4.3",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "pycodestyle>=2.13.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "transformers>=4.52.2",
]
